# animus

./: .asdf-tools  .gitignore  AGENTS.admin-interface.md  AGENTS.api.md  AGENTS.class-diagram.md  AGENTS.constitutional_memory.md  AGENTS.erd.md  AGENTS.handoff.md  AGENTS.llm.md  AGENTS.md  AGENTS.memory.md  AGENTS.modules_draft.md  AGENTS.orm.md  AGENTS.persistence.md  AGENTS.system_draft.md  AGENTS.tenancy.md  AGENTS.todo.md  AI-EXPERIMENTATION-ETHICS.md  CHARTER.md  CMakeLists.txt  CONCEPT.md  CONCEPT.nl.md  DESIGN_NOTES.md  LICENSE.txt  MARKET_RESEARCH_2026-02-21T11-36-00+0100.md  MARKET_RESEARCH_2026-02-21T11-36-00+0100.nl.md  README.md  ROADMAP.md  test_hkdf  test_hkdf.cpp
admin-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-ui/src/: App.vue  main.ts
cmake/: GenerateEmbeddedAdminUi.cmake  GenerateEmbeddedTemplates.cmake
config/: db.example.json  model_context_sizes.json  providers.example.json
docs/: README.md  channel.md  qol-tools-schematic.md
docs/cohere/: api-reference.md
docs/mistral/: api-reference.md
docs/ollama/: api-reference.md
docs/openai/: api-reference.md
docs/openai-codex/: api-reference.md
docs/telegram/: api.md  bots.md  features.md
docs/vk/: readme.md
docs/whatsapp/: README.md  architecture.md  implementation-notes.md  protocol.md  risk-assessment.md
docs/zai/: api-reference.md
include/animus/: Jobs.h
include/animus_kernel/: AdminServer.h  AgentConfigStore.h  AgentKernel.h  AgentStore.h  AttachmentStore.h  AttachmentTokenManager.h  AuthHelpers.h  AuthManager.h  AuthStore.h  ChainRunner.h  ChannelManager.h  ChannelState.h  CompactionPolicy.h  CompactionService.h  CompactionSummaryGenerator.h  ContextProviderRegistry.h  ConversationCompactor.h  DatabaseConfig.h  DefaultSessionRouter.h  DiffusionCapabilities.h  DiffusionProvider.h  DiffusionStore.h  EmbeddingService.h  FileSessionStore.h  GallivantingStore.h  IDataStore.h  ISessionRouter.h  ISessionStore.h  InMemorySessionStore.h  IncomingEvent.h  KernelConfig.h  MemoryFileStore.h  MemorySearch.h  MemoryStore.h  MessageQueue.h  NodeDaemon.h  NodeManager.h  OntologyStore.h  PgDataStore.h  PromptAssembler.h  (+13 more)
include/animus_sdk/: abi.h  exports.h  module_api.h
scripts/: bluesky.lua  build-animus-docker-sudo.sh  build-animus-docker.sh  build-animus-node-docker.sh  build-ui.sh  build.sh  start-admin-ui.sh  start-daemon.sh  stop-daemon.sh  test.sh  vk.lua
scripts/md2pdf/: README.md  md2pdf.mjs  package.json
sops/: market-open-assessment.md
src/: main.cpp  migrate.cpp
src/core/: Jobs.cpp
src/kernel/: AgentConfigStore.cpp  AgentKernel.cpp  ChannelManager.cpp  DiscordGatewayLoop.cpp  EmbeddingService.cpp  MessageQueue.cpp  NodeDaemon.cpp  NodeManager.cpp  PromptLogStore.cpp  ProviderThrottle.cpp  WhatsAppGatewayLoop.cpp
state/sops/: configure-channel.md  organize-software-project.md  setup-roleplay-game.md
templates/consolidation-intake/: en.md
templates/consolidation-ontology/: en.md
templates/consolidation-review/: en.md
templates/gallivanting/: bn.md  de.md  en.md  es.md  fa.md  fr.md  ha.md  he.md  hi.md  ja.md  km.md  koKP.md  koKR.md  nl.md  pl.md  pt.md  ru.md  tr.md  uk.md  vi.md  yue.md  zh.md
templates/system-prompt.md/: ar.md  bn.md  de.md  en.md  es.md  fa.md  fr.md  ha.md  he.md  hi.md  ja.md  km.md  koKP.md  koKR.md  nl.md  pl.md  pt.md  ru.md  tr.md  uk.md  vi.md  yue.md  zh.md
tests/: AdminServerDisabledTests.cpp  AdminServerTests.cpp  AgentConfigReloadTests.cpp  ChannelsToolTests.cpp  ConsolidationTests.cpp  ConsolidationTests.cpp.bak  DiaryManagerTests.cpp  JobsTests.cpp  LLMProviderTests.cpp  LuaTests.cpp  MemoryFileStoreTests.cpp  MemorySearchTests.cpp  ModuleLoaderTests.cpp  OntologyStoreTests.cpp  SchedulerTests.cpp  SessionTests.cpp  SignalProtocolTests.cpp  test-hkdf.js  test-noise-keys.js
tickets/: 001-admin-server-scaffold.md  002-agent-config-api.md  004-memory-layer-api.md  004-memory-layer-api.report.md  007-interface-management-api.report.md  008-constitution-api.md  009-spa-scaffold.md  010-chat-ui.md  013-llm-provider-abstraction.md  014-concrete-llm-providers.md  015-chain-execution-pipeline.md  015-concrete-llm-providers.md  016-chain-execution-pipeline.md  016-provider-config-integration-test.md  017-provider-config-integration-test.md  026-email-tool.md  037-study-tool.md  040-implementation-report.md  040-project-tool.md  064-passive-mode.md  065-s3-storage-tool.md  066-caldav-calendar-tool.md  067-carddav-contacts-tool.md  068-image-tool.md  069-implementation-report.md  069-web-search-tool.md  070-semantic-search.md  071-file-tool-enhancement.md  071-implementation-report.md  073-hormonal-modulation.md  074-channel-tool-unification.md  075-filesystem-script-loading.md  077-moltx-adapter.md  078-teams-adapter.md  080-gojek-channel-adapter.md  081-fann-intuition-module.md  082-cortex-peripheral-layer.md  083-per-agent-memory-layers.md  084-first-run-agent-wizard.md  085-dice-tool.md  (+44 more)
tickets/archived/: 001-admin-server-scaffold.report.md  002-agent-config-api.report.md  003-session-management-api.md  003-session-management-api.report.md  004-memory-layer-api.md  004-memory-layer-api.report.md  005-websocket-chat-endpoint.md  005-websocket-chat-endpoint.report.md  006-observation-stream.md  006-observation-stream.report.md  007-interface-management-api.md  008-constitution-api.md  008-constitution-api.report.md  009-spa-scaffold.report.md  010-chat-ui.report.md  011-memory-browser-ui.md  011-memory-browser-ui.report.md  012-resource-embedding.md  013-llm-provider-abstraction.md  013-llm-provider-abstraction.report.md  014-provider-config-admin-ui.md  014-provider-config-admin-ui.report.md  015-concrete-llm-providers.report.md  016-chain-execution-pipeline.report.md  017-constitutional-memory-layers.md  017-constitutional-memory-layers.report.md  019-session-migration-sqlite-dal.md  019-session-migration-sqlite-dal.report.md  020-provider-concurrency-throttle.md  020-provider-concurrency-throttle.report.md  021-tool-calling-and-reasoning.md  (+94 more)
tools/: gen_token_dicts.py
(+962 files in other folders)
